Minor updates to tmux.conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -149,12 +149,12 @@ $((#{selection_end_y} > #{selection_start_y} ? \
     } {
         # otherwise, get a smaller set of info (this might be updated in the future)
         set -g status-left '#[nobold]#{?client_prefix,#[reverse],#[noreverse]}\
-[#S:#I:#P]#[noreverse] | '
+[#S:#I:#P]#[noreverse] '
         set -g status-right '#[nobold] | \
 #{?#{==:#{session_path},#(echo $HOME)},~,#{b:session_path}}\
  | #(date +%R)\
 #{?#(test -f /opt/vc/bin/vcgencmd), | #(/usr/bin/env bash $SebCfgDir/temperature.sh),}\
-#{?#(command -v upower), | #(/usr/bin/env bash $SebCfgDir/battery.sh),} '
+#{?#(command -v upower), | #(/usr/bin/env bash $SebCfgDir/battery.sh),}'
     }
 }
 
@@ -178,3 +178,5 @@ set -g message-style fg=$fav_bg,bg=$fav_fg
 
 # mode style (colors in copy mode, etc.)
 set-window-option -g mode-style fg=$fav_bg,bg=$fav_fg
+
+source-file -q ~/.tmux-extras # source any system-specific settings if any
