Changed coloring, added keybind to toggle silence monitoring

--- a/tmux.conf
+++ b/tmux.conf
@@ -39,12 +39,21 @@ unbind Down     # default: select the pane below
 unbind Left     # default: select the pane to the left
 unbind Right    # default: select the pane to the right
 unbind C        # default: cutomize-mode -Z
+unbind :        # default: command-prompt
 
 bind -T prefix / splitw -h      # split horizontally (l & r)
 bind -T prefix % selectp -l     # select last window
 bind -T prefix \; command-prompt
 bind -T prefix ? list-keys
 bind -T prefix O customize-mode -Z
+set -g silence-action current
+set -g monitor-silence 0
+bind -T prefix : {
+    # toggle whether we monitor silence in a pane or not
+    set -Fp monitor-silence "#{?#{==:#{monitor-silence},0},30,0}"
+    # todo: add something to the window in the status bar to show it's being
+    # monitored?
+}
 
 bind -T prefix C-l lock
 
@@ -80,8 +89,10 @@ bind -N "List copy-mode-vi keybinds" -T copy-mode-vi I list-keys -aN -T copy-mod
 set -g set-titles on
 
 # set timeout 5 mins
-set -g lock-after-time 300
-set -g lock-command "cmatrix -su 2 -C white"
+if-shell "test -n $(command -v cmatrix)" {
+    set -g lock-after-time 300
+    set -g lock-command "cmatrix -su 2 -C white"
+}
 # package tty-clock in debian-based distros; tty-clock-git in arch
 #set -g lock-command "tty-clock -ScbtB -C 2 -d 0.5"
 
@@ -90,36 +101,34 @@ set -g display-time 1500
 
 ## colors ##
 
-# defaults:
-# fg = colour121 (#87ffaf)
-# comp = colour212 (closest to #ff8d86)
-# bg = colour234 (#1c1c1c)
-%if "#{==:#{host},pi4b}"
-    # raspberry pi server
-    fav_fg=colour255
-    fav_cm=colour196
-%elif "#{==:#{host},capybara}"
-    # server
-    fav_fg=colour147
-    fav_cm=colour209
-%else
-    # default
-    fav_fg=colour212
-    fav_cm=colour121
-%endif
-fav_bg=colour234
-
-# give color or don't if not 256 color
-# the color is a little wonky when using an 8bit terminal, but TODO later
-if-shell "echo $TERM|grep -q 256color" \
-        'set -g default-terminal "tmux-256color"' \
-        'set -g default-terminal "tmux"'
+# give full color if 256-bit or less color if 8-bit
 set -wa terminal-overrides ",tmux*:RGB"
+if-shell "echo $TERM|grep -q 256color" {
+    set -g default-terminal "tmux-256color"
+    %if "#{==:#{host},capybara}"
+        set -g @fav_fg colour147
+        set -g @fav_cm colour209
+    %else
+        set -g @fav_fg colour212
+        set -g @fav_cm colour121
+    %endif
+    set -g @fav_bg colour234
+} {
+    set -g default-terminal "tmux"
+    %if "#{==:#{host},capybara}"
+        set -g @fav_fg colour6
+        set -g @fav_cm colour3
+    %else
+        set -g @fav_fg colour5
+        set -g @fav_cm colour2
+    %endif
+    set -g @fav_bg colour0
+}
 
 # status bar conf
 set -g status-left-length 40
 set -g status-right-length 60
-set -g status-style bg=$fav_bg,fg=$fav_fg
+set -g status-style "bg=#{@fav_bg},fg=#{@fav_fg}"
 
 # when the client (terminal window) is resized,
 set-hook -g client-resized {
@@ -158,25 +167,25 @@ $((#{selection_end_y} > #{selection_start_y} ? \
     }
 }
 
-set-window-option -g window-status-current-style fg=$fav_bg,bg=$fav_fg,nobold
+set-window-option -g window-status-current-style "fg=#{@fav_bg},bg=#{@fav_fg},nobold"
 
 # pane number display
-set -g display-panes-active-colour $fav_fg
-set -g display-panes-colour $fav_cm
+set -Fg display-panes-active-colour "#{@fav_fg}"
+set -Fg display-panes-colour "#{@fav_cm}"
 
 # clock mode
-set -g clock-mode-colour $fav_fg
+set -Fg clock-mode-colour "#{@fav_fg}"
 #set -g clock-mode-style 12
 
 # pane border
 set -g pane-border-style fg=colour240
-set -g pane-active-border-style fg=$fav_fg
+set -g pane-active-border-style "fg=#{@fav_fg}"
 
 # message text
 # colors are deliberately backwards here
-set -g message-style fg=$fav_bg,bg=$fav_fg
+set -g message-style "fg=#{@fav_bg},bg=#{@fav_fg}"
 
 # mode style (colors in copy mode, etc.)
-set-window-option -g mode-style fg=$fav_bg,bg=$fav_fg
+set-window-option -g mode-style "fg=#{@fav_bg},bg=#{@fav_fg}"
 
 source-file -q ~/.tmux-extras # source any system-specific settings if any
