Added visual marker that a pane in a window is monitoring for silence

--- a/tmux.conf
+++ b/tmux.conf
@@ -51,8 +51,7 @@ set -g monitor-silence 0
 bind -T prefix : {
     # toggle whether we monitor silence in a pane or not
     set -Fp monitor-silence "#{?#{==:#{monitor-silence},0},30,0}"
-    # todo: add something to the window in the status bar to show it's being
-    # monitored?
+    rename-window "#{?monitor-silence,#{window_name}\',#{s/'$//:window_name}}"
 }
 
 bind -T prefix C-l lock
