--- a/tmux.conf
+++ b/tmux.conf
@@ -152,8 +152,8 @@ $((#{selection_end_y} > #{selection_start_y} ? \
         set -g status-right '#[nobold] | \
 #{?#{==:#{session_path},#(echo $HOME)},~,#{b:session_path}} | \
 #(date +%a\ %b\ %d\ %I:%M\ %P)\
-#{?#(test -f /opt/vc/bin/vcgencmd), | #(/usr/bin/env bash $SebCfgDir/temperature.sh),}\
-#{?#(command -v upower), | #(/usr/bin/env bash $SebCfgDir/battery.sh),}'
+#{?#(test -f /opt/vc/bin/vcgencmd), | #(/usr/bin/env bash $_confdir/temperature.sh),}\
+#{?#(command -v upower), | #(/usr/bin/env bash $_confdir/battery.sh),}'
     } {
         # otherwise, get a smaller set of info (this might be updated in the future)
         set -g status-left '#[nobold]#{?client_prefix,#[reverse],#[noreverse]}\
@@ -161,8 +161,8 @@ $((#{selection_end_y} > #{selection_start_y} ? \
         set -g status-right '#[nobold] | \
 #{?#{==:#{session_path},#(echo $HOME)},~,#{b:session_path}}\
  | #(date +%R)\
-#{?#(test -f /opt/vc/bin/vcgencmd), | #(/usr/bin/env bash $SebCfgDir/temperature.sh),}\
-#{?#(command -v upower), | #(/usr/bin/env bash $SebCfgDir/battery.sh),}'
+#{?#(test -f /opt/vc/bin/vcgencmd), | #(/usr/bin/env bash $_confdir/temperature.sh),}\
+#{?#(command -v upower), | #(/usr/bin/env bash $_confdir/battery.sh),}'
     }
 }
 
