Updated battery.sh and tmux.conf to deal w/ termux; added monitor menu option in tmux.conf; other minor changes in tmux.conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -50,8 +50,13 @@ set -g silence-action current
 set -g monitor-silence 0
 bind -T prefix : {
     # toggle whether we monitor silence in a pane or not
-    set -Fp monitor-silence "#{?#{==:#{monitor-silence},0},30,0}"
-    rename-window "#{?monitor-silence,#{window_name}\',#{s/'$//:window_name}}"
+    # -Fp: expand format options; pane-specific
+    menu -T "Monitor Options" -x W -y W "#{?#{==:#{monitor-silence},0},0,1} silence" s \
+        'set -Fp monitor-silence "#{?#{==:#{monitor-silence},0},30,0}"' \
+        "#{monitor-bell} bell" b 'set -Fp monitor-bell' \
+        "#{monitor-activity} activity" a 'set -Fp monitor-activity' \
+        '' \
+        none n 'set -p monitor-silence 0; set -p monitor-bell off; set -p monitor-activity off'
 }
 
 bind -T prefix C-l lock
@@ -124,6 +129,12 @@ if-shell "echo $TERM|grep -q 256color" {
     set -g @fav_bg colour0
 }
 
+if-shell "test $USER = root" {
+    set -g @fav_fg colour1
+    set -g @fav_cm colour2
+    set -g lock-command ""
+}
+
 # status bar conf
 set -g status-left-length 40
 set -g status-right-length 60
@@ -137,8 +148,8 @@ set-hook -g client-resized {
     if-shell "test #{window_width} -gt 64" {
         # we have a lot of space to put the things we want
         set -g status-left '#[nobold]#{?client_prefix,#[reverse],#[noreverse]}[#S:#I:#P]\
-#[noreverse] \
-#(whoami) #h #{?pane_mode,#{s/-mode//:#{pane_mode}} ,}\
+#[noreverse]\
+#{?#{==:#(whoami),root},, #(whoami)} #h #{?pane_mode,#{s/-mode//:#{pane_mode}} ,}\
 #{?#{||:#{==:#{pane_mode},view-mode},#{==:#{pane_mode},copy-mode}},\
 #{?rectangle_toggle,#[reverse],#[noreverse]}\
 #{?selection_active,\
@@ -153,7 +164,8 @@ $((#{selection_end_y} > #{selection_start_y} ? \
 #{?#{==:#{session_path},#(echo $HOME)},~,#{b:session_path}} | \
 #(date +%a\ %b\ %d\ %I:%M\ %P)\
 #{?#(test -f /opt/vc/bin/vcgencmd), | #(/usr/bin/env bash $_confdir/temperature.sh),}\
-#{?#(command -v upower), | #(/usr/bin/env bash $_confdir/battery.sh),}'
+#{?#{||:#(command -v upower),#(command -v termux-battery-status)},\
+ | #(/usr/bin/env bash $_confdir/battery.sh),}'
     } {
         # otherwise, get a smaller set of info (this might be updated in the future)
         set -g status-left '#[nobold]#{?client_prefix,#[reverse],#[noreverse]}\
@@ -162,7 +174,8 @@ $((#{selection_end_y} > #{selection_start_y} ? \
 #{?#{==:#{session_path},#(echo $HOME)},~,#{b:session_path}}\
  | #(date +%R)\
 #{?#(test -f /opt/vc/bin/vcgencmd), | #(/usr/bin/env bash $_confdir/temperature.sh),}\
-#{?#(command -v upower), | #(/usr/bin/env bash $_confdir/battery.sh),}'
+#{?#{||:#(command -v upower),#(command -v termux-battery-status)},\
+ | #(/usr/bin/env bash $_confdir/battery.sh),}'
     }
 }
 
@@ -179,6 +192,7 @@ set -Fg clock-mode-colour "#{@fav_fg}"
 # pane border
 set -g pane-border-style fg=colour240
 set -g pane-active-border-style "fg=#{@fav_fg}"
+set -g pane-border-lines heavy
 
 # message text
 # colors are deliberately backwards here
