Minor tweaks to tmux.conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -107,27 +107,12 @@ set -g display-time 1500
 
 # give full color if 256-bit or less color if 8-bit
 set -wa terminal-overrides ",tmux*:RGB"
-#if-shell "echo $TERM|grep -q 256color" {
-#    set -g default-terminal "tmux-256color"
-#    %if "#{==:#{host},capybara}"
-#        set -g @fav_fg colour147
-#        set -g @fav_cm colour209
-#    %else
-#        set -g @fav_fg colour212
-#        set -g @fav_cm colour121
-#    %endif
-#    set -g @fav_bg colour234
-#} {
-#    set -g default-terminal "tmux"
-#    %if "#{==:#{host},capybara}"
-#        set -g @fav_fg colour6
-#        set -g @fav_cm colour3
-#    %else
-#        set -g @fav_fg colour5
-#        set -g @fav_cm colour2
-#    %endif
-#    set -g @fav_bg colour0
-#}
+
+if-shell "echo $TERM|grep -q 256color" {
+    set -g default-terminal "tmux-256color"
+} {
+    set -g default-terminal "tmux"
+}
 
 set -g @fav_fg colour$_prompt_color_username
 set -g @fav_cm colour$_prompt_color_hostname
