Updates to elinks.conf and i3config

--- a/elinks.conf
+++ b/elinks.conf
@@ -35,7 +35,7 @@
 
     ## ui.clock.enable [0|1]
     #  Whether to display a digital clock in the status bar.
-    set ui.clock.enable = 1
+    set ui.clock.enable = 0
 
 
   ## ui.language <language>
@@ -56,7 +56,7 @@
 
   ## ui.show_ip [0|1]
   #  Whether to display IP of the document in the status bar.
-  set ui.show_ip = 0
+  set ui.show_ip = 1
 
 
 
@@ -179,6 +179,271 @@ bind "main" "|" = "none"
     #  MIME-type matching this file extension ('*' is used here in place of
     #  '.').
     set mime.extension.txt = "text/plain"
+
+
+
+
+
+
+##################################
+# Automatically saved keybindings
+#
+
+bind "main" "Shift-A" = "auth-manager"
+bind "main" "a" = "add-bookmark-link"
+bind "main" "A" = "auth-manager"
+
+
+
+##############################
+# Automatically saved options
+#
+
+## bookmarks 
+
+  ## bookmarks.file_format <num>
+  set bookmarks.file_format = 1
+
+
+## config 
+
+  ## config.comments <num>
+  set config.comments = 1
+
+  ## config.saving_style <num>
+  set config.saving_style = 3
+
+
+## connection 
+
+  ## connection.ssl 
+
+    ## connection.ssl.https_by_default [0|1]
+    set connection.ssl.https_by_default = 1
+
+
+
+## document 
+
+  ## document.browse 
+
+    ## document.browse.images 
+
+      ## document.browse.images.display_style <num>
+      set document.browse.images.display_style = 3
+
+
+    ## document.browse.links 
+
+      ## document.browse.links.active_link 
+
+        ## document.browse.links.active_link.enable_color [0|1]
+        set document.browse.links.active_link.enable_color = 1
+
+
+      ## document.browse.links.numbering [0|1]
+      set document.browse.links.numbering = 1
+
+      ## document.browse.links.target_blank <num>
+      set document.browse.links.target_blank = 2
+
+
+    ## document.browse.search 
+
+      ## document.browse.search.regex <num>
+      set document.browse.search.regex = 1
+
+
+
+  ## document.colors 
+
+    ## document.colors.text <color|#rrggbb>
+    set document.colors.text = "white"
+
+    ## document.colors.background <color|#rrggbb>
+    set document.colors.background = "black"
+
+
+
+
+
+
+##############################
+# Automatically saved options
+#
+
+## document 
+
+  ## document.colors 
+
+    ## document.colors.link <color|#rrggbb>
+    set document.colors.link = "blue"
+
+    ## document.colors.vlink <color|#rrggbb>
+    set document.colors.vlink = "purple"
+
+    ## document.colors.image <color|#rrggbb>
+    set document.colors.image = "darkolivegreen"
+
+
+  ## document.download 
+
+    ## document.download.set_original_time [0|1]
+    set document.download.set_original_time = 1
+
+
+
+## terminal 
+
+  ## terminal.tmux 
+
+    ## terminal.tmux.colors <num>
+    set terminal.tmux.colors = 1
+    ## terminal.tmux.type <num>
+    set terminal.tmux.type = 1
+
+
+## ui 
+
+  ## ui.tabs 
+
+    ## ui.tabs.show_bar <num>
+    set ui.tabs.show_bar = 2
+
+    ## ui.tabs.top [0|1]
+    set ui.tabs.top = 1
+
+
+  ## ui.temperature 
+
+    ## ui.temperature.enable [0|1]
+    set ui.temperature.enable = 1
+
+
+  ## ui.mouse_disable [0|1]
+  set ui.mouse_disable = 1
+
+
+
+
+
+##############################
+# Automatically saved options
+#
+
+## ui 
+
+  ## ui.colors 
+
+    ## ui.colors.color 
+
+      ## ui.colors.color.status 
+
+        ## ui.colors.color.status.status-bar 
+
+          ## ui.colors.color.status.status-bar.background <color|#rrggbb>
+          set ui.colors.color.status.status-bar.background = "white"
+
+
+
+
+
+
+
+
+
+##############################
+# Automatically saved options
+#
+
+## ui 
+
+  ## ui.colors 
+
+    ## ui.colors.color 
+
+      ## ui.colors.color.title 
+
+        ## ui.colors.color.title.title-bar 
+
+          ## ui.colors.color.title.title-bar.text <color|#rrggbb>
+          set ui.colors.color.title.title-bar.text = "white"
+
+          ## ui.colors.color.title.title-bar.background <color|#rrggbb>
+          set ui.colors.color.title.title-bar.background = "black"
+
+
+        ## ui.colors.color.title.title-text 
+
+          ## ui.colors.color.title.title-text.text <color|#rrggbb>
+          set ui.colors.color.title.title-text.text = "white"
+
+          ## ui.colors.color.title.title-text.background <color|#rrggbb>
+          set ui.colors.color.title.title-text.background = "black"
+
+
+
+      ## ui.colors.color.status 
+
+        ## ui.colors.color.status.showip-text 
+
+          ## ui.colors.color.status.showip-text.text <color|#rrggbb>
+          set ui.colors.color.status.showip-text.text = "black"
+
+          ## ui.colors.color.status.showip-text.background <color|#rrggbb>
+          set ui.colors.color.status.showip-text.background = "white"
+
+
+        ## ui.colors.color.status.status-bar 
+
+          ## ui.colors.color.status.status-bar.text <color|#rrggbb>
+          set ui.colors.color.status.status-bar.text = "black"
+
+
+        ## ui.colors.color.status.status-text 
+
+          ## ui.colors.color.status.status-text.text <color|#rrggbb>
+          set ui.colors.color.status.status-text.text = "black"
+
+          ## ui.colors.color.status.status-text.background <color|#rrggbb>
+          set ui.colors.color.status.status-text.background = "white"
+
+
+
+      ## ui.colors.color.tabs 
+
+        ## ui.colors.color.tabs.selected 
+
+          ## ui.colors.color.tabs.selected.background <color|#rrggbb>
+          set ui.colors.color.tabs.selected.background = "purple"
+
+
+
+      ## ui.colors.color.desktop 
+
+        ## ui.colors.color.desktop.text <color|#rrggbb>
+        set ui.colors.color.desktop.text = "white"
+
+        ## ui.colors.color.desktop.background <color|#rrggbb>
+        set ui.colors.color.desktop.background = "black"
+
+
+
+
+
+
+
+
+##############################
+# Automatically saved options
+#
+
+## document 
+
+  ## document.colors 
+
+    ## document.colors.use_link_number_color [0|1]
+    set document.colors.use_link_number_color = 1
 
 
 
