--- a/tmux.conf
+++ b/tmux.conf
@@ -39,16 +39,14 @@ unbind Down     # default: select the pane below
 unbind Left     # default: select the pane to the left
 unbind Right    # default: select the pane to the right
 unbind C        # default: cutomize-mode -Z
-unbind :        # default: command-prompt
 
 bind -T prefix / splitw -h      # split horizontally (l & r)
 bind -T prefix % selectp -l     # select last window
-bind -T prefix \; command-prompt
 bind -T prefix ? list-keys
 bind -T prefix O customize-mode -Z
 set -g silence-action current
 set -g monitor-silence 0
-bind -T prefix : {
+bind -T prefix \; {
     # toggle whether we monitor silence in a pane or not
     # -Fp: expand format options; pane-specific
     menu -T "Monitor Options" -x W -y W "#{?#{==:#{monitor-silence},0},0,1} silence" s \
@@ -100,8 +98,8 @@ if-shell "test -n $(command -v cmatrix)" {
 # package tty-clock in debian-based distros; tty-clock-git in arch
 #set -g lock-command "tty-clock -ScbtB -C 2 -d 0.5"
 
-# sets time messages display to 1.5 seconds
-set -g display-time 1500
+# sets time messages display to 2 seconds
+set -g display-time 2000
 
 ## colors ##
 
@@ -114,6 +112,7 @@ if-shell "echo $TERM|grep -q 256color" {
     set -g default-terminal "tmux"
 }
 
+# dynamically set tmux colors to the zsh prompt colors
 set -g @fav_fg colour$_prompt_color_username
 set -g @fav_cm colour$_prompt_color_hostname
 set -g @fav_bg colour0
