Minor updates to tmux.conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -54,6 +54,7 @@ bind -T prefix \; {
         "#{monitor-bell} bell" b 'set -Fp monitor-bell' \
         "#{monitor-activity} activity" a 'set -Fp monitor-activity' \
         '' \
+        default d 'set -p monitor-silence 0; set -p monitor-bell on; set -p monitor-activity off' \
         none n 'set -p monitor-silence 0; set -p monitor-bell off; set -p monitor-activity off'
 }
 
