Show the monitor-silence time in Monitor Options menu when active in tmux.conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -49,8 +49,9 @@ set -g monitor-silence 0
 bind -T prefix \; {
     # toggle whether we monitor silence in a pane or not
     # -Fp: expand format options; pane-specific
-    menu -T "Monitor Options" -x W -y W "#{?#{==:#{monitor-silence},0},0,1} silence" s \
-        'set -Fp monitor-silence "#{?#{==:#{monitor-silence},0},30,0}"' \
+    menu -T "Monitor Options" -x W -y W \
+        "#{?#{==:#{monitor-silence},0},0,1} silence #{?#{==:#{monitor-silence},0},,(#{monitor-silence})}" \
+        s 'set -Fp monitor-silence "#{?#{==:#{monitor-silence},0},30,0}"' \
         "#{monitor-bell} bell" b 'set -Fp monitor-bell' \
         "#{monitor-activity} activity" a 'set -Fp monitor-activity' \
         '' \
