Added keybind to toggle locking in tmux.conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -93,9 +93,19 @@ bind -N "List copy-mode-vi keybinds" -T copy-mode-vi I list-keys -aN -T copy-mod
 set -g set-titles on
 
 # set timeout 5 mins
+set -g lock-after-time 0
 if-shell "test -n $(command -v cmatrix)" {
     set -g lock-after-time 300
     set -g lock-command "cmatrix -su 2 -C white"
+    bind -T prefix J {
+        if-shell "test #{lock-after-time} -eq 300" {
+            set -g lock-after-time 0
+            display "Locking disabled"
+        } {
+            set -g lock-after-time 300
+            display "Locking enabled (#{lock-after-time}s)"
+        }
+    }
 }
 # package tty-clock in debian-based distros; tty-clock-git in arch
 #set -g lock-command "tty-clock -ScbtB -C 2 -d 0.5"
