Changed h- and v-split keybinds in helix.toml and tmux.conf; other changes

--- a/helix.toml
+++ b/helix.toml
@@ -1,6 +1,6 @@
 # general configuration
 
-theme = "base16_terminal"
+theme = "fleet_dark"
 
 [editor]
 line-number = "relative"
@@ -8,15 +8,19 @@ mouse = false
 cursorline = true
 # cursorcolumn = true
 bufferline = "multiple"
+auto-save = true
+text-width = 80
 
 [editor.statusline]
 left = ["file-name", "file-modification-indicator", "spinner", "mode"]
 center = ["diagnostics", "workspace-diagnostics"]
-right = ["total-line-numbers", "file-line-ending", "position", "position-percentage", 
-    "selections", "file-encoding", "version-control"]
+right = ["total-line-numbers", "file-line-ending", "position", "position-percentage", "selections", "file-encoding", "version-control"]
 mode.normal = ""
 mode.insert = "INS"
 mode.select = "SEL"
+
+[editor.lsp]
+enable = true
 
 [editor.cursor-shape]
 insert = "bar"
@@ -38,6 +42,10 @@ nbsp = "%"
 render = true
 character = "|"
 
+[editor.soft-wrap]
+enable = true
+wrap-at-text-width = true
+
 # keybinds
 
 ## normal mode
@@ -47,11 +55,12 @@ C-s = ":w"
 D = ["select_mode", "goto_line_end", "delete_selection"]
 A-D = ["select_mode", "goto_line_end", "delete_selection_noyank"]
 0 = "goto_line_start"
+#';' = "command_mode"
 
 ## window mode
 [keys.normal."C-w"]
-'"' = "hsplit"
-'/' = "vsplit"
+'_' = "hsplit"
+'|' = "vsplit"
 s = "no_op"
 C-s = "no_op"
 v = "no_op"
@@ -61,6 +70,7 @@ C-v = "no_op"
 [keys.normal."C-w".t]
 c = ":n"
 q = ":bc"
+o = ":bco"
 
 [keys.normal.g]
 t = ":bn"
@@ -71,6 +81,9 @@ G = "goto_file_end"
 [keys.normal."+"]
 # reload the helix config file
 r = ":run-shell-command pkill -USR1 helix"
+w = ":toggle soft-wrap.enable"
+'+' = ":config-open"
+c = ":char"
 
 ## mimicking vimrc <leader> binds
 [keys.normal.","]
