--- a/tmux.conf
+++ b/tmux.conf
@@ -25,6 +25,10 @@ set -g renumber-windows on
 
 set -g word-separators " -_@()[]#:"
 
+set -s focus-events on
+
+set -s extended-keys on
+
 ### key-bindings ###
 
 # reload config file
@@ -39,14 +43,18 @@ unbind Down     # default: select the pane below
 unbind Left     # default: select the pane to the left
 unbind Right    # default: select the pane to the right
 unbind C        # default: cutomize-mode -Z
+unbind \"       # default: split vertically
 
-bind -T prefix / splitw -h      # split horizontally (l & r)
+bind -T prefix | splitw -h      # split horizontally (l & r)
+bind -T prefix _ splitw -v      # split vertically
 bind -T prefix % selectp -l     # select last window
 bind -T prefix ? list-keys
 bind -T prefix O customize-mode -Z
+bind -T prefix \; command-prompt
+
 set -g silence-action current
 set -g monitor-silence 0
-bind -T prefix \; {
+bind -T prefix \" {
     # toggle whether we monitor silence in a pane or not
     # -Fp: expand format options; pane-specific
     menu -T "Monitor Options" -x W -y W \
@@ -87,6 +95,10 @@ bind -N "List prefix keybinds" -T prefix I list-keys -aN -T prefix
 bind -N "List copy-mode-vi keybinds" -T copy-mode-vi I list-keys -aN -T copy-mode-vi
 # prefix+? still lists all keybinds in all modes
 
+# get a popup window
+bind -T prefix P popup -EE -d "#{pane_current_path}"
+bind -T prefix C-P popup -EE -d "#{session_path}"
+
 ### appearance ###
 
 # autoname windows
@@ -116,7 +128,8 @@ set -g display-time 2000
 ## colors ##
 
 # give full color if 256-bit or less color if 8-bit
-set -wa terminal-overrides ",tmux*:RGB"
+# also, ensure focus reporting is set for focus-events and extkeys for extended keys
+set -as terminal-overrides ",*:U8=0,tmux*:RGB:focus:extkeys"
 
 if-shell "echo $TERM|grep -q 256color" {
     set -g default-terminal "tmux-256color"
@@ -134,6 +147,10 @@ if-shell "test $USER = root" {
     set -g @fav_cm colour2
     set -g lock-command ""
 }
+
+# popup
+set -g popup-border-lines rounded
+set -g popup-border-style "fg=#{@fav_fg}"
 
 # status bar conf
 set -g status-left-length 40
