Major updates to tmux.conf; temperature.sh and battery.sh are now part of the config

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,4 @@
+# : << 'EOF'
 # tmux.conf
 
 ### general ###
@@ -11,7 +12,7 @@ bind a send-prefix
 
 set -g default-shell "$SHELL"
 
-# vim for life babeyyy
+# vim keybinds
 set -g status-keys vi
 set -g mode-keys vi
 
@@ -29,6 +30,8 @@ set -s focus-events on
 
 set -s extended-keys on
 
+set -g remain-on-exit failed
+
 ### key-bindings ###
 
 # reload config file
@@ -38,12 +41,10 @@ unbind %        # default: split to l & r windows
 unbind \;       # default: move to prev active pane
 # unbind &      # default: kill current window
 unbind l        # default: move to prev selected window (not rebound)
-unbind Up       # default: select the pane above
-unbind Down     # default: select the pane below
-unbind Left     # default: select the pane to the left
-unbind Right    # default: select the pane to the right
 unbind C        # default: cutomize-mode -Z
 unbind \"       # default: split vertically
+unbind n        # default: next-window
+unbind p        # default: previous-window
 
 bind -T prefix | splitw -h      # split horizontally (l & r)
 bind -T prefix _ splitw -v      # split vertically
@@ -69,6 +70,11 @@ bind -T prefix \" {
 
 bind -T prefix C-l lock
 
+bind -r -T prefix C-PageDown next-window
+bind -r -T prefix C-PageUp previous-window
+bind -r -T prefix Tab next-window
+bind -r -T prefix BTab previous-window
+
 set -g base-index 1
 set -g pane-base-index 1
 
@@ -85,7 +91,8 @@ bind -T copy-mode-vi y send-keys -X copy-selection
 bind -T copy-mode-vi C-q send-keys -X rectangle-toggle
 
 # toggle status bar
-bind ` set-option -g status
+bind -T prefix F1 set -g status
+set -g status-position top
 
 # change session cwd to the one in the selected pane
 bind -T prefix C attach-session -c "#{pane_current_path}"
@@ -98,6 +105,9 @@ bind -N "List copy-mode-vi keybinds" -T copy-mode-vi I list-keys -aN -T copy-mod
 # get a popup window
 bind -T prefix P popup -EE -d "#{pane_current_path}"
 bind -T prefix C-P popup -EE -d "#{session_path}"
+
+# resize window to fit the current client
+bind -T prefix R resize-window -A
 
 ### appearance ###
 
@@ -149,8 +159,11 @@ if-shell "test $USER = root" {
 }
 
 # popup
-set -g popup-border-lines rounded
-set -g popup-border-style "fg=#{@fav_fg}"
+if-shell "test $(tmux -V | sed 's/[^0-9]//g') -ge 33" {
+    # these options were added in v3.3
+    set -g popup-border-lines rounded
+    set -g popup-border-style "fg=#{@fav_fg}"
+}
 
 # status bar conf
 set -g status-left-length 40
@@ -164,43 +177,40 @@ set-hook -g client-resized {
     # with `test' however)
     if-shell "test #{window_width} -gt 64" {
         # we have a lot of space to put the things we want
-        set -g status-left '#[nobold]#{?client_prefix,#[reverse],#[noreverse]}[#S:#I:#P]\
+        set -g status-left '#[nobold]#{?client_prefix,#[reverse],#[noreverse]}[#S:#I.#P]\
 #[noreverse]\
 #{?#{==:#(whoami),root},, #(whoami)} #h #{?pane_mode,#{s/-mode//:#{pane_mode}} ,}\
 #{?#{||:#{==:#{pane_mode},view-mode},#{==:#{pane_mode},copy-mode}},\
 #{?rectangle_toggle,#[reverse],#[noreverse]}\
-#{?selection_active,\
-#(echo $((#{selection_end_x} > #{selection_start_x} ? \
+#{?selection_active,#(echo $((#{selection_end_x} > #{selection_start_x} ? \
 #{selection_end_x}-#{selection_start_x}+1 : #{selection_start_x}-#{selection_end_x}+1))\
 x\
 $((#{selection_end_y} > #{selection_start_y} ? \
 #{selection_end_y}-#{selection_start_y}+1 : #{selection_start_y}-#{selection_end_y}+1))\
-)#[noreverse] ,}\
-,}#[noreverse]| '
+)#[noreverse] ,},}#[noreverse]| '
         set -g status-right '#[nobold] | \
 #{?#{==:#{session_path},#(echo $HOME)},~,#{b:session_path}} | \
 #(date +%a\ %b\ %d\ %I:%M\ %P)\
-#{?#(test -f /opt/vc/bin/vcgencmd), | #(/usr/bin/env bash $_confdir/temperature.sh),}\
+#{?#(test -f /opt/vc/bin/vcgencmd), | #(. /dev/stdin <<< $(cut -c3- ~/.tmux.conf); _temperature),}\
 #{?#{||:#(command -v upower),#(command -v termux-battery-status)},\
- | #(/usr/bin/env bash $_confdir/battery.sh),}'
+ | #(. /dev/stdin <<< $(cut -c3- ~/.tmux.conf); _battery_info),}'
     } {
         # otherwise, get a smaller set of info (this might be updated in the future)
         set -g status-left '#[nobold]#{?client_prefix,#[reverse],#[noreverse]}\
-[#S:#I:#P]#[noreverse] '
+[#S:#I.#P]#[noreverse] '
         set -g status-right '#[nobold] | \
-#{?#{==:#{session_path},#(echo $HOME)},~,#{b:session_path}}\
- | #(date +%R)\
-#{?#(test -f /opt/vc/bin/vcgencmd), | #(/usr/bin/env bash $_confdir/temperature.sh),}\
+#{?#{==:#{session_path},#(echo $HOME)},~,#{b:session_path}} | #(date +%R)\
+#{?#(test -f /opt/vc/bin/vcgencmd), | #(. /dev/stdin <<< $(cut -c3- ~/.tmux.conf); _temperature),}\
 #{?#{||:#(command -v upower),#(command -v termux-battery-status)},\
- | #(/usr/bin/env bash $_confdir/battery.sh),}'
+ | #(. /dev/stdin <<< $(cut -c3- ~/.tmux.conf); _battery_info),}'
     }
 }
 
 set-window-option -g window-status-current-style "fg=#{@fav_bg},bg=#{@fav_fg},nobold"
 
 # pane number display
-set -Fg display-panes-active-colour "#{@fav_fg}"
-set -Fg display-panes-colour "#{@fav_cm}"
+set -Fg display-panes-active-colour "#{@fav_cm}"
+set -Fg display-panes-colour "#{@fav_fg}"
 
 # clock mode
 set -Fg clock-mode-colour "#{@fav_fg}"
@@ -219,3 +229,86 @@ set -g message-style "fg=#{@fav_bg},bg=#{@fav_fg}"
 set-window-option -g mode-style "fg=#{@fav_bg},bg=#{@fav_fg}"
 
 source-file -q ~/.tmux-extras # source any system-specific settings if any
+
+# EOF
+# # exit the script if any statement returns a non-true value
+# #set -e
+#
+# _battery_info () {
+#    _tput_colors="$(tput colors)"
+#    if [ ! -z $(command -v upower) ]; then
+#        cmd_output=$(upower -i $(upower -e | grep BAT))
+#        charge_state=$(echo "$cmd_output" | grep --color=never -E "state" | awk '{$1="state:"; print $2}')
+#        percentage=$(echo "$cmd_output" | grep --color=never -E "percentage" | awk '{$1="percentage:"; print $2}')
+#    elif [ ! -z $(command -v termux-battery-status) ]; then
+#        cmd_output=$(termux-battery-status)
+#        charge_state=$(echo "$cmd_output" | jq -M '.status' | sed 's/"//g')
+#        percentage=$(echo "$cmd_output" | jq -M '.percentage')
+#    fi
+#    
+#    # note: this substitution (${var,,}) doesn't work in zsh; it does in bash, though
+#    state_symbol=
+#    if [[ ${charge_state,,} == 'discharging' ]]; then
+#        # characters: ↓⇃🔋
+#        if [ $_tput_colors -eq 8 ]; then
+#            state_symbol="⇃"
+#        else
+#            state_symbol=""
+#        fi
+#    elif [[ ${charge_state,,} == 'charging' ]]; then
+#        # characters: ↑↿⚡
+#        if [ $_tput_colors -eq 8 ]; then
+#            state_symbol="↑"
+#        else
+#            state_symbol="↿"
+#        fi
+#    else
+#        :
+#        #state_symbol="🔌"
+#    fi
+#
+#    # strip the % if it exists
+#    percentage=${percentage%\%}
+#    charge=0
+#    charge=$(awk -v charge="$charge" -v capacity="$(echo "$percentage")" 'BEGIN { print charge + (capacity > 100 ? 100 : capacity) / 100 }')
+#    if [ $_tput_colors -eq 8 ]; then
+#        palette=( 1 3 5 6 2 )
+#        full=$(awk "BEGIN { printf \"%.0f\", ($charge) * 5 }")
+#        eval battery_vbar_fg="colour$(( full == 0 ? 1 : ${palette[$full]} ))"
+#        echo "#[fg=${battery_vbar_fg}]$state_symbol$percentage%"
+#    elif [ $_tput_colors -ge 256 ]; then
+#        eval set -- "▁ ▂ ▃ ▄ ▅ ▆ ▇ █"
+#        eval $(awk "BEGIN { printf \"battery_vbar_symbol=$%d\", ($charge) * ($# - 1) + 1 }")
+#        palette=( 196 202 208 214 220 226 190 154 118 46 )
+#        full=$(awk "BEGIN { printf \"%.0f\", ($charge) * 10 }")
+#        eval battery_vbar_fg="colour$(( full == 0 ? 1 : ${palette[$full]} ))"
+#        battery_vbar="${battery_vbar_symbol}"
+#        echo "#[fg=${battery_vbar_fg?}]$battery_vbar $state_symbol$percentage%"
+#    fi
+# }
+#
+# _temperature() {
+#    if [ -f "/opt/vc/bin/vcgencmd" ]; then
+#        # measuring temperature on raspberry pi
+#        temp=$(/opt/vc/bin/vcgencmd measure_temp |\
+#            awk -F "[=\']" '{print($2 * 1.8)+32}')
+#        if [ ! -z $temp ]; then
+#            echo -en "$temp°F"
+#        fi
+#    elif [ ! -z $(which sensors) ]; then
+#        # package lm-sensors
+#        #sensors | grep "CPU temp" | awk -F "[:°+]" '{print($3 * 1.8)+32}'
+#        temp=$(sensors |\
+#        # assume that the first instance is the cpu temperature
+#        # (it may not be for every device but it is on the ones i use)
+#        grep "id 0:" |\
+#        awk -F "[:°+]" '{print($3 * 1.8)+32}')
+#        if [ ! -z $temp ]; then
+#            echo -en "$temp°F"
+#        fi
+#        # 🌡( #(/bin/bash ~/Config/temperature.sh)°F
+#    else
+#        # TODO: figure something else out later
+#        echo -n ""
+#    fi
+# }
