--- a/tmux.conf
+++ b/tmux.conf
@@ -107,7 +107,9 @@ bind -T prefix P popup -EE -d "#{pane_current_path}"
 bind -T prefix C-P popup -EE -d "#{session_path}"
 
 # resize window to fit the current client
-bind -T prefix R resize-window -A
+bind -T prefix R set -w window-size largest
+
+bind -T prefix C-r respawn-pane
 
 ### appearance ###
 
@@ -158,13 +160,6 @@ if-shell "test $USER = root" {
     set -g lock-command ""
 }
 
-# popup
-if-shell "test $(tmux -V | sed 's/[^0-9]//g') -ge 33" {
-    # these options were added in v3.3
-    set -g popup-border-lines rounded
-    set -g popup-border-style "fg=#{@fav_fg}"
-}
-
 # status bar conf
 set -g status-left-length 40
 set -g status-right-length 60
@@ -191,18 +186,18 @@ $((#{selection_end_y} > #{selection_start_y} ? \
         set -g status-right '#[nobold] | \
 #{?#{==:#{session_path},#(echo $HOME)},~,#{b:session_path}} | \
 #(date +%a\ %b\ %d\ %I:%M\ %P)\
-#{?#(test -f /opt/vc/bin/vcgencmd), | #(. /dev/stdin <<< $(cut -c3- ~/.tmux.conf); _temperature),}\
+#{?#(test -f /opt/vc/bin/vcgencmd), | #(. <(cut -c3- ~/.tmux.conf); _temperature),}\
 #{?#{||:#(command -v upower),#(command -v termux-battery-status)},\
- | #(. /dev/stdin <<< $(cut -c3- ~/.tmux.conf); _battery_info),}'
+ | #(. <(cut -c3- ~/.tmux.conf); _battery_info),}'
     } {
         # otherwise, get a smaller set of info (this might be updated in the future)
         set -g status-left '#[nobold]#{?client_prefix,#[reverse],#[noreverse]}\
 [#S:#I.#P]#[noreverse] '
         set -g status-right '#[nobold] | \
 #{?#{==:#{session_path},#(echo $HOME)},~,#{b:session_path}} | #(date +%R)\
-#{?#(test -f /opt/vc/bin/vcgencmd), | #(. /dev/stdin <<< $(cut -c3- ~/.tmux.conf); _temperature),}\
+#{?#(test -f /opt/vc/bin/vcgencmd), | #(. <(cut -c3- ~/.tmux.conf); _temperature),}\
 #{?#{||:#(command -v upower),#(command -v termux-battery-status)},\
- | #(. /dev/stdin <<< $(cut -c3- ~/.tmux.conf); _battery_info),}'
+ | #(. <(cut -c3- ~/.tmux.conf); _battery_info),}'
     }
 }
 
@@ -219,7 +214,19 @@ set -Fg clock-mode-colour "#{@fav_fg}"
 # pane border
 set -g pane-border-style fg=colour240
 set -g pane-active-border-style "fg=#{@fav_fg}"
-set -g pane-border-lines heavy
+set -g pane-border-lines double
+set -g pane-border-status bottom
+
+# version-specific (>3.3)
+if-shell "test $(tmux -V | sed 's/[^0-9]//g') -ge 33" {
+    # these options were added in v3.3
+    # popup
+    set -g popup-border-lines rounded
+    set -g popup-border-style "fg=#{@fav_fg}"
+
+    set -g pane-border-format " #P [#{pane_width}x#{pane_height}] #{pane_current_command} (#{b:pane_current_path}) " 
+    set -g pane-border-indicators off
+}
 
 # message text
 # colors are deliberately backwards here
@@ -232,7 +239,7 @@ source-file -q ~/.tmux-extras # source any system-specific settings if any
 
 # EOF
 # # exit the script if any statement returns a non-true value
-# #set -e
+# set -e
 #
 # _battery_info () {
 #    _tput_colors="$(tput colors)"
@@ -245,17 +252,17 @@ source-file -q ~/.tmux-extras # source any system-specific settings if any
 #        charge_state=$(echo "$cmd_output" | jq -M '.status' | sed 's/"//g')
 #        percentage=$(echo "$cmd_output" | jq -M '.percentage')
 #    fi
+#    charge_state=$(echo $charge_state | tr '[:upper:]' '[:lower:]')
 #    
-#    # note: this substitution (${var,,}) doesn't work in zsh; it does in bash, though
 #    state_symbol=
-#    if [[ ${charge_state,,} == 'discharging' ]]; then
+#    if [[ "$charge_state" == 'discharging' ]]; then
 #        # characters: ↓⇃🔋
 #        if [ $_tput_colors -eq 8 ]; then
-#            state_symbol="⇃"
+#            state_symbol="↓"
 #        else
-#            state_symbol=""
+#            state_symbol="⇃"
 #        fi
-#    elif [[ ${charge_state,,} == 'charging' ]]; then
+#    elif [[ "$charge_state" == 'charging' ]]; then
 #        # characters: ↑↿⚡
 #        if [ $_tput_colors -eq 8 ]; then
 #            state_symbol="↑"
