--- a/tmux.conf
+++ b/tmux.conf
@@ -223,10 +223,9 @@ if-shell "test $(tmux -V | sed 's/[^0-9]//g') -ge 33" {
     # popup
     set -g popup-border-lines rounded
     set -g popup-border-style "fg=#{@fav_fg}"
-
-    set -g pane-border-format " #P [#{pane_width}x#{pane_height}] #{pane_current_command} (#{b:pane_current_path}) " 
     set -g pane-border-indicators off
 }
+set -g pane-border-format " #P [#{pane_width}x#{pane_height}] #{pane_current_command} (#{?#{==:#{pane_current_path},#(echo $HOME)},~,#{b:pane_current_path}}) " 
 
 # message text
 # colors are deliberately backwards here
@@ -286,7 +285,7 @@ source-file -q ~/.tmux-extras # source any system-specific settings if any
 #    elif [ $_tput_colors -ge 256 ]; then
 #        eval set -- "▁ ▂ ▃ ▄ ▅ ▆ ▇ █"
 #        eval $(awk "BEGIN { printf \"battery_vbar_symbol=$%d\", ($charge) * ($# - 1) + 1 }")
-#        palette=( 196 202 208 214 220 226 190 154 118 46 )
+#        palette=( 196 202 208 214 220 226 190 154 118 46 46 )
 #        full=$(awk "BEGIN { printf \"%.0f\", ($charge) * 10 }")
 #        eval battery_vbar_fg="colour$(( full == 0 ? 1 : ${palette[$full]} ))"
 #        battery_vbar="${battery_vbar_symbol}"
