--- a/tmux.conf
+++ b/tmux.conf
@@ -45,6 +45,7 @@ unbind C        # default: cutomize-mode -Z
 unbind \"       # default: split vertically
 unbind n        # default: next-window
 unbind p        # default: previous-window
+unbind M-n
 
 bind -T prefix | splitw -h      # split horizontally (l & r)
 bind -T prefix _ splitw -v      # split vertically
@@ -103,13 +104,15 @@ bind -N "List copy-mode-vi keybinds" -T copy-mode-vi I list-keys -aN -T copy-mod
 # prefix+? still lists all keybinds in all modes
 
 # get a popup window
-bind -T prefix P popup -EE -d "#{pane_current_path}"
-bind -T prefix C-P popup -EE -d "#{session_path}"
+bind -T prefix M-p popup -EE -d "#{pane_current_path}"
+bind -T prefix C-p popup -EE -d "#{session_path}"
 
 # resize window to fit the current client
 bind -T prefix R set -w window-size largest
 
 bind -T prefix C-r respawn-pane
+
+bind -T prefix M-m set mouse
 
 ### appearance ###
 
@@ -123,10 +126,10 @@ if-shell "test -n $(command -v cmatrix)" {
     set -g lock-command "cmatrix -su 2 -C white"
     bind -T prefix J {
         if-shell "test #{lock-after-time} -eq 300" {
-            set -g lock-after-time 0
+            set -s lock-after-time 0
             display "Locking disabled"
         } {
-            set -g lock-after-time 300
+            set -s lock-after-time 300
             display "Locking enabled (#{lock-after-time}s)"
         }
     }
@@ -182,7 +185,7 @@ set-hook -g client-resized {
 x\
 $((#{selection_end_y} > #{selection_start_y} ? \
 #{selection_end_y}-#{selection_start_y}+1 : #{selection_start_y}-#{selection_end_y}+1))\
-)#[noreverse] ,},}#[noreverse]| '
+)#[noreverse] ,},}#[noreverse]#{?#{mouse},~,|} '
         set -g status-right '#[nobold] | \
 #{?#{==:#{session_path},#(echo $HOME)},~,#{b:session_path}} | \
 #(date +%a\ %b\ %d\ %I:%M\ %P)\
@@ -192,7 +195,7 @@ $((#{selection_end_y} > #{selection_start_y} ? \
     } {
         # otherwise, get a smaller set of info (this might be updated in the future)
         set -g status-left '#[nobold]#{?client_prefix,#[reverse],#[noreverse]}\
-[#S:#I.#P]#[noreverse] '
+[#S:#I.#P#{?#{mouse},>,]}#[noreverse] '
         set -g status-right '#[nobold] | \
 #{?#{==:#{session_path},#(echo $HOME)},~,#{b:session_path}} | #(date +%R)\
 #{?#(test -f /opt/vc/bin/vcgencmd), | #(. <(cut -c3- ~/.tmux.conf); _temperature),}\
@@ -212,10 +215,15 @@ set -Fg clock-mode-colour "#{@fav_fg}"
 #set -g clock-mode-style 12
 
 # pane border
-set -g pane-border-style fg=colour240
+if-shell "echo $TERM|grep -q 256color" {
+    set -g pane-border-style fg=colour240
+} {
+    set -g pane-border-style fg=colour7
+}
 set -g pane-active-border-style "fg=#{@fav_fg}"
 set -g pane-border-lines double
 set -g pane-border-status bottom
+set -g pane-border-format " #P [#{pane_width}x#{pane_height}] #{pane_current_command} (#{?#{==:#{pane_current_path},#(echo $HOME)},~,#{b:pane_current_path}}) " 
 
 # version-specific (>3.3)
 if-shell "test $(tmux -V | sed 's/[^0-9]//g') -ge 33" {
@@ -225,7 +233,6 @@ if-shell "test $(tmux -V | sed 's/[^0-9]//g') -ge 33" {
     set -g popup-border-style "fg=#{@fav_fg}"
     set -g pane-border-indicators off
 }
-set -g pane-border-format " #P [#{pane_width}x#{pane_height}] #{pane_current_command} (#{?#{==:#{pane_current_path},#(echo $HOME)},~,#{b:pane_current_path}}) " 
 
 # message text
 # colors are deliberately backwards here
@@ -278,7 +285,7 @@ source-file -q ~/.tmux-extras # source any system-specific settings if any
 #    charge=0
 #    charge=$(awk -v charge="$charge" -v capacity="$(echo "$percentage")" 'BEGIN { print charge + (capacity > 100 ? 100 : capacity) / 100 }')
 #    if [ $_tput_colors -eq 8 ]; then
-#        palette=( 1 3 5 6 2 )
+#        palette=( 1 3 5 6 2 2 )
 #        full=$(awk "BEGIN { printf \"%.0f\", ($charge) * 5 }")
 #        eval battery_vbar_fg="colour$(( full == 0 ? 1 : ${palette[$full]} ))"
 #        echo "#[fg=${battery_vbar_fg}]$state_symbol$percentage%"
