Added new keybinds to split panes based on the current directory

--- a/tmux.conf
+++ b/tmux.conf
@@ -48,7 +48,9 @@ unbind p        # default: previous-window
 unbind M-n
 
 bind -T prefix | splitw -h      # split horizontally (l & r)
+bind -T prefix M-| splitw -h -c "#{pane_current_path}"
 bind -T prefix _ splitw -v      # split vertically
+bind -T prefix M-_ splitw -v -c "#{pane_current_path}"
 bind -T prefix % selectp -l     # select last window
 bind -T prefix ? list-keys
 bind -T prefix O customize-mode -Z
