Updates to tmux.conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -55,6 +55,7 @@ bind -T prefix % selectp -l     # select last window
 bind -T prefix ? list-keys
 bind -T prefix O customize-mode -Z
 bind -T prefix \; command-prompt
+bind -T prefix X kill-pane #P
 
 set -g silence-action current
 set -g monitor-silence 0
@@ -86,6 +87,11 @@ bind -r -T prefix h selectp -L
 bind -r -T prefix j selectp -D
 bind -r -T prefix k selectp -U
 bind -r -T prefix l selectp -R
+
+bind -T root M-h selectp -L
+bind -T root M-j selectp -D
+bind -T root M-k selectp -U
+bind -T root M-l selectp -R
 
 ## copy mode
 
@@ -123,9 +129,9 @@ set -g set-titles on
 
 # set timeout 5 mins
 set -g lock-after-time 0
-if-shell "test -n $(command -v cmatrix)" {
+if-shell "test -n $(command -v tty-clock)" {
     set -g lock-after-time 300
-    set -g lock-command "cmatrix -su 2 -C white"
+    set -g lock-command "tty-clock -SctB -C 7 -d 0.5"
     bind -T prefix J {
         if-shell "test #{lock-after-time} -eq 300" {
             set -s lock-after-time 0
@@ -136,8 +142,7 @@ if-shell "test -n $(command -v cmatrix)" {
         }
     }
 }
-# package tty-clock in debian-based distros; tty-clock-git in arch
-#set -g lock-command "tty-clock -ScbtB -C 2 -d 0.5"
+#set -g lock-command "cmatrix -su 2 -C white"
 
 # sets time messages display to 2 seconds
 set -g display-time 2000
@@ -146,12 +151,12 @@ set -g display-time 2000
 
 # give full color if 256-bit or less color if 8-bit
 # also, ensure focus reporting is set for focus-events and extkeys for extended keys
-set -as terminal-overrides ",*:U8=0,tmux*:RGB:focus:extkeys"
+set -as terminal-overrides ",*:U8=0,tmux*:focus:extkeys,*-256color:RGB"
 
-if-shell "echo $TERM|grep -q 256color" {
-    set -g default-terminal "tmux-256color"
+if-shell "echo $TERM|grep -Eq '(256color|kitty)'" {
+    set -s default-terminal "tmux-256color"
 } {
-    set -g default-terminal "tmux"
+    set -s default-terminal "tmux"
 }
 
 # dynamically set tmux colors to the zsh prompt colors
