--- a/polybar.ini
+++ b/polybar.ini
@@ -30,7 +30,7 @@ disabled = #6e6a86
 [bar/main]
 width = 100%
 height = 24pt
-radius = 6
+radius = 0
 
 ; dpi = 96
 
@@ -39,21 +39,21 @@ foreground = ${colors.foreground}
 
 line-size = 3pt
 
-border-size = 4pt
+border-size = 0pt
 border-color = #00000000
 
 padding-left = 0
-padding-right = 1
+padding-right = 2
 
 module-margin = 1
 
 separator = |
 separator-foreground = ${colors.disabled}
 
-font-0 = Liberation Mono;2
+font-0 = Noto Sans;2
 
 modules-left = xworkspaces xwindow
-modules-right = filesystem pulseaudio fcitx memory cpu date battery
+modules-right = filesystem pulseaudio brightness memory cpu date battery
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -119,6 +119,13 @@ label-volume = %percentage%%
 label-muted = muted
 label-muted-foreground = ${colors.disabled}
 
+[module/brightness]
+type = custom/script
+exec = printf "%.0f%%" $(bc -l <<< "$(cat /sys/class/backlight/intel_backlight/brightness)/$(cat /sys/class/backlight/intel_backlight/max_brightness)*100")
+interval = 1
+format-prefix = "BRI "
+format-prefix-foreground = ${colors.primary}
+
 [module/xkeyboard]
 type = internal/xkeyboard
 blacklist-0 = num lock
@@ -175,7 +182,7 @@ type = internal/date
 interval = 1
 
 date = %H:%M
-date-alt = %Y-%m-%d %H:%M:%S
+date-alt = %Y-%m-%d %I:%M:%S %p
 
 label = %date%
 label-foreground = ${colors.primary}
@@ -185,7 +192,7 @@ type = custom/script
 interval = 30
 # note: the dash at "... || echo −" is a minus sign (U+2212), not a hyphen (U+002d)
 # note here because `echo -` (with a hyphen) doesn't yield the desired result
-exec = echo "$(grep -q Charging /sys/class/power_supply/BAT?/status && echo + || echo −)$(cat /sys/class/power_supply/BAT?/capacity)%"
+exec = echo "$(grep -q Charging /sys/class/power_supply/BAT?/status && echo + || echo −)$(cat /sys/class/power_supply/BAT?/capacity)% ($(powerprofilesctl get | cut -c1-3))"
 format-prefix = "BAT "
 format-prefix-foreground = ${colors.primary}
 
