--- a/kitty.conf
+++ b/kitty.conf
@@ -9,3 +9,6 @@ bold_font Liberation Mono Bold
 italic_font Liberation Mono Italic
 bold_italic_font Liberation Mono Bold Italic
 font_size 11.0
+
+# other config
+hide_window_decorations yes
