Added Alt-PUp and Alt-PDown keybinds in tmux.conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -74,8 +74,8 @@ bind -T prefix \" {
 
 bind -T prefix C-l lock
 
-bind -r -T prefix C-PageDown next-window
-bind -r -T prefix C-PageUp previous-window
+bind -r -T root M-PageDown next-window
+bind -r -T root M-PageUp previous-window
 bind -r -T prefix Tab next-window
 bind -r -T prefix BTab previous-window
 
